[package]
name = "ray_marching"
version = "0.1.0"
authors = ["Josh <jose.josh04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35"

[build]
rustflags = ["-C","opt-level=3", "-C", "target-cpu=native", "-C", "llvm-args='-ffast-math'"]