[package]
name = "ray_marching"
version = "0.1.0"
authors = ["Josh <jose.josh04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35"
mimalloc = { version = "0.1.17", default-features = false }
image = "0.24.3"

[profile.release]
codegen-units = 1
panic = "abort"
debug = true